Fix horizontal scrollbar from TOC

--- a/src/components/TableOfContent/styles.module.css
+++ b/src/components/TableOfContent/styles.module.css
@@ -9,8 +9,8 @@
 
 .container {
   position: absolute;
-  width: 40ch;
-  max-height: calc(100vh - 1rem);
+  width: 35ch;
+  max-height: 100vh;
   overflow-y: auto;;
   margin: 0 0 0 3rem;
   box-shadow: inset 1px 0 0 0 var(--color-border);
